# fb_models

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
artifacts/: knn_field_goal.joblib  play_type_classifier.joblib
docs/: index.md
docs/superpowers/plans/: 2026-06-25-play-simulation-models.md
docs/superpowers/specs/: 2026-06-25-play-simulation-models-design.md
examples/: game_simulation.py
models/: formation_classifier.joblib
notebooks/: 00_explore_data.ipynb  03_train_play_call.ipynb  03b_train_formation.ipynb  04_train_personnel.ipynb  05_train_usage.ipynb  play_type_predictor.ipynb
scripts/: pull_pbp.py
src/fb_models/: config.py  dataset.py  formations.py  personnel_packages.py
src/fb_models/data/: features.py  loader.py
src/fb_models/features/: coaches.py  feature_store.py  games.py  participation.py  player_usage.py  players.py  situations.py  teams.py  touch_shares.py  usage.py  utils.py
src/fb_models/modeling/: plays.py
src/fb_models/modeling/formation/: features.py  predict.py  train.py
src/fb_models/modeling/personnel/: features.py  predict.py  train.py
src/fb_models/modeling/play_type/: features.py  predict.py  train.py
src/fb_models/modeling/player_selection/: predict.py
src/fb_models/modeling/usage/: predict.py
src/fb_models/models/: classifier.py  knn.py
src/fb_models/training/: evaluate.py  train.py
tests/: conftest.py  test_classifier.py  test_evaluate.py  test_features.py  test_knn.py  test_loader.py  test_train.py
