[project]
name = "fb-models"
version = "0.1.0"
description = "NFL play simulation models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fb_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
