[project]
name = "fb-models"
version = "0.1.0"
description = "NFL play simulation models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
    "joblib-stubs>=1.5.3.1.20260117",
    "ipykernel>=7.3.0",
    "seaborn>=0.13.2",
    "pandas-stubs>=3.0.3.260530",
    "black[jupyter]>=26.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "flake8>=7.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fb_models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
